test/invalid-syntax/56311_invalid_character/invalid_character.agu
-- Author: tcomp56311, João Vedor

-- Lexical Problem

let x : Int = 42$

-- Error: Invalid character '$', Should Crash